Users completed, save mp3 audio files completed. I continue

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       - db_value:/var/lib/postgresql/data/
     ports:
       - 5432:5432
+    # environment:
+    #   - DB_PASSWORD=postgres
     env_file:
       - ./.env
 volumes:
