--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,5 +10,21 @@ services:
     #   - DB_PASSWORD=postgres
     env_file:
       - ./.env
+  web:
+    build: .
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; alembic upgrade head; uvicorn src.main:app --host 0.0.0.0'
+    volumes:
+      - web_value:/app/media/
+    ports:
+      - 80:8000
+    environment:
+      - DB_NAME=postgres
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+      - DB_HOST=db
+      - DB_PORT=5432
+    depends_on:
+      - db
 volumes:
   db_value:
+  web_value:
