--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.11.1
 anyio==3.6.2
 appdirs==1.4.4
+async-generator==1.10
 asyncpg==0.27.0
+attrs==23.1.0
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
@@ -11,22 +14,31 @@ ffmpeg-downloader==0.2.0
 flake8==6.0.0
 greenlet==2.0.2
 h11==0.14.0
+httpcore==0.17.2
+httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
+outcome==1.2.0
 packaging==23.1
+pluggy==1.0.0
 pycodestyle==2.10.0
+pycparser==2.21
 pydantic==1.10.7
 pydub==0.25.1
 pyflakes==3.0.1
+pytest==7.3.1
 python-dotenv==1.0.0
 python-multipart==0.0.6
 requests==2.31.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.15
 starlette==0.27.0
 tqdm==4.65.0
+trio==0.22.0
 typing_extensions==4.5.0
 urllib3==2.0.2
 uvicorn==0.22.0
